--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="my-game-game" class="game"></div>
+  <div id="my-game-game" class="game" width="8000" height="8000"></div>
 
   <script src="vendor/phaser.min.js"></script>
   <script src="js/main.min.js"></script>
